--- a/index.html
+++ b/index.html
@@ -18,150 +18,166 @@
 
   <body class="page">
     <header class="header">
-      <!--logo-->
-      <a href="" lang="en" class="logo"
-        >Web<span class="colortext-header">Studio</span></a
-      >
-      <nav class="navigation">
-        <ul class="list-index">
-          <li class="item-index">
-            <a href="" class="link current">Студия</a>
+      <div class="container header-container">
+        <!--logo-->
+        <a href="" lang="en" class="logo"
+          >Web<span class="colortext-header">Studio</span></a
+        >
+        <nav class="navigation">
+          <ul class="list-index">
+            <li class="item-index">
+              <a href="" class="link current">Студия</a>
+            </li>
+            <li class="item-index">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item-index">
+              <a href="" class="link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts">
+          <li class="item-contacts-mail">
+            <a href="" class="link-contacts-mail">info@devstudio.com</a>
           </li>
-          <li class="item-index">
-            <a href="./portfolio.html" class="link">Портфолио</a>
-          </li>
-          <li class="item-index">
-            <a href="" class="link">Контакты</a>
+          <li class="item-contacts-tel">
+            <a href="" class="link-contacts-tel">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="contacts">
-        <li class="item-contacts-mail">
-          <a href="" class="link-contacts-mail">info@devstudio.com</a>
-        </li>
-        <li class="item-contacts-tel">
-          <a href="" class="link-contacts-tel">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn">Заказать услугу</button>
+        </div>
       </section>
       <!--features-->
       <section class="section">
-        <h2 hidden class="section-title">особенности</h2>
-        <ul class="list-features">
-          <li class="item-features">
-            <h3 class="title-features">Внимание к деталям</h3>
-            <p class="content-features">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="item-features">
-            <h3 class="title-features">Пунктуальность</h3>
-            <p class="content-features">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="item-features">
-            <h3 class="title-features">Планирование</h3>
-            <p class="content-features">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="item-features">
-            <h3 class="title-features">Современные технологии</h3>
-            <p class="content-features">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden class="section-title">особенности</h2>
+          <ul class="list-features">
+            <li class="item-features">
+              <h3 class="title-features">Внимание к деталям</h3>
+              <p class="content-features">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="item-features">
+              <h3 class="title-features">Пунктуальность</h3>
+              <p class="content-features">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item-features">
+              <h3 class="title-features">Планирование</h3>
+              <p class="content-features">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="item-features">
+              <h3 class="title-features">Современные технологии</h3>
+              <p class="content-features">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="work">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="work-list">
-          <li class="work-item">
-            <img
-              width="294"
-              src="images/img1.jpg"
-              alt="разработка програмного обеспечения"
-            />
-          </li>
-          <li class="work-item">
-            <img
-              width="294"
-              src="images/img2.jpg"
-              alt="тестирование приложений"
-            />
-          </li>
-          <li class="work-item">
-            <img
-              width="294"
-              src="images/img3.jpg"
-              alt="работа с цветовой гаммой"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="work-list">
+            <li class="work-item">
+              <img
+                width="294"
+                src="images/img1.jpg"
+                alt="разработка програмного обеспечения"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                width="294"
+                src="images/img2.jpg"
+                alt="тестирование приложений"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                width="294"
+                src="images/img3.jpg"
+                alt="работа с цветовой гаммой"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img width="260" src="./images/photo1.jpg" alt="Product Designer" />
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                width="260"
+                src="./images/photo1.jpg"
+                alt="Product Designer"
+              />
 
-            <h3 class="team-subtitle">Игорь Демьяненко</h3>
-            <p lang="en" class="position">Product Designer</p>
-          </li>
+              <h3 class="team-subtitle">Игорь Демьяненко</h3>
+              <p lang="en" class="position">Product Designer</p>
+            </li>
 
-          <li class="team-item">
-            <img
-              width="260"
-              src="./images/photo2.jpg"
-              alt="Frontend Developer"
-            />
+            <li class="team-item">
+              <img
+                width="260"
+                src="./images/photo2.jpg"
+                alt="Frontend Developer"
+              />
 
-            <h3 class="team-subtitle">Ольга Репина</h3>
-            <p lang="en" class="position">Frontend Developer</p>
-          </li>
+              <h3 class="team-subtitle">Ольга Репина</h3>
+              <p lang="en" class="position">Frontend Developer</p>
+            </li>
 
-          <li class="team-item">
-            <img width="260" src="./images/photo3.jpg" alt="Marketing" />
+            <li class="team-item">
+              <img width="260" src="./images/photo3.jpg" alt="Marketing" />
 
-            <h3 class="team-subtitle">Николай Тарасов</h3>
-            <p lang="en" class="position">Marketing</p>
-          </li>
+              <h3 class="team-subtitle">Николай Тарасов</h3>
+              <p lang="en" class="position">Marketing</p>
+            </li>
 
-          <li class="team-item">
-            <img width="260" src="./images/photo4.jpg" alt="UI Designer" />
+            <li class="team-item">
+              <img width="260" src="./images/photo4.jpg" alt="UI Designer" />
 
-            <h3 class="team-subtitle">Михаил Ермаков</h3>
-            <p lang="en" class="position">UI Designer</p>
-          </li>
-        </ul>
+              <h3 class="team-subtitle">Михаил Ермаков</h3>
+              <p lang="en" class="position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <!--logo-->
-      <a href="" class="logo"
-        >Web<span class="colortext-footer">Studio</span></a
-      >
-      <address class="address">
-        <ul class="address-list">
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li>
-            <a href="" class="mail" lang="en">info@example.com</a>
-          </li>
-          <li>
-            <a href="" class="tel">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <!--logo-->
+        <a href="" class="logo"
+          >Web<span class="colortext-footer">Studio</span></a
+        >
+        <address class="address">
+          <ul class="address-list">
+            <li>г. Киев, пр-т Леси Украинки, 26</li>
+            <li>
+              <a href="" class="mail" lang="en">info@example.com</a>
+            </li>
+            <li>
+              <a href="" class="tel">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
