--- a/index.html
+++ b/index.html
@@ -47,14 +47,18 @@
       </div>
     </header>
     <main>
+      <!--hero-->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-btn">Заказать услугу</button>
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="hero-btn">Заказать услугу</button>
         </div>
       </section>
       <!--features-->
-      <section class="section">
+      <section class="features section">
         <div class="container">
           <h2 hidden class="section-title">особенности</h2>
           <ul class="list-features">
@@ -89,7 +93,8 @@
           </ul>
         </div>
       </section>
-      <section class="work">
+      <!--work-->
+      <section class="work section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-list">
@@ -117,7 +122,8 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <!--team-->
+      <section class="team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list">
