--- a/portfolio.html
+++ b/portfolio.html
@@ -16,139 +16,144 @@
   </head>
   <body>
     <header class="header">
-      <!--logo-->
-      <a href="" lang="en" class="logo"
-        >Web<span class="colortext-header">Studio</span></a
-      >
-      <section>
-        <nav class="navigation">
-          <ul class="list-index">
-            <li class="item-index">
-              <a href="./index.html" class="link">Студия</a>
-            </li>
-            <li class="item-index">
-              <a href="./portfolio.html" class="link">Портфолио</a>
-            </li>
-            <li class="item-index">
-              <a href="" class="link">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-      </section>
-      <ul class="contacts">
-        <li class="item-contacts-mail">
-          <a href="" class="link-contacts-mail">info@devstudio.com</a>
-        </li>
-        <li class="item-contacts-tel">
-          <a href="" class="link-contacts-tel">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <div class="container header-container">
+        <!--logo-->
+        <a href="" lang="en" class="logo"
+          >Web<span class="colortext-header">Studio</span></a
+        >
+        <section>
+          <nav class="navigation">
+            <ul class="list-index">
+              <li class="item-index">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="item-index">
+                <a href="./portfolio.html" class="link">Портфолио</a>
+              </li>
+              <li class="item-index">
+                <a href="" class="link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+        </section>
+        <ul class="contacts">
+          <li class="item-contacts-mail">
+            <a href="" class="link-contacts-mail">info@devstudio.com</a>
+          </li>
+          <li class="item-contacts-tel">
+            <a href="" class="link-contacts-tel">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main class="page">
-      <section>
-        <h1 hidden>Catalog</h1>
-        <ul>
-          <li>
-            <button type="button" class="portfolio-btn">Все</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-btn">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-btn">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-btn">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-btn">Маркетинг</button>
-          </li>
-        </ul>
+      <section class="portfolio">
+        <div class="container">
+          <h1 hidden>Catalog</h1>
+          <ul class="btn-list">
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn">Все</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn">Веб-сайты</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn">Приложения</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn">Дизайн</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-btn">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="portfolio-container">
+            <li class="portfolio-item">
+              <img width="370" src="./images/portfolio img1.jpg" alt="" />
 
-        <ul>
-          <li>
-            <img width="370" src="./images/portfolio img1.jpg" alt="" />
+              <h2 class="subtitle">Технокряк</h2>
+              <p class="portfolio-content">Веб-сайт</p>
+            </li>
 
-            <h2 class="subtitle">Технокряк</h2>
-            <p class="portfolio-content">Веб-сайт</p>
-          </li>
+            <li class="portfolio-item">
+              <img width="370" src="./images/portfolio img2.jpg" alt="" />
 
-          <li>
-            <img width="370" src="./images/portfolio img2.jpg" alt="" />
+              <h2 class="subtitle">
+                Постер <span lang="en">Orlean vs Golden Star</span>
+              </h2>
+              <p class="portfolio-content">Дизайн</p>
+            </li>
 
-            <h2 class="subtitle">
-              Постер <span lang="en">Orlean vs Golden Star</span>
-            </h2>
-            <p class="portfolio-content">Дизайн</p>
-          </li>
+            <li class="portfolio-item">
+              <img width="370" src="./images/portfolio img3.jpg" alt="" />
 
-          <li>
-            <img width="370" src="./images/portfolio img3.jpg" alt="" />
+              <h2 class="subtitle">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="portfolio-content">Приложение</p>
+            </li>
 
-            <h2 class="subtitle">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="portfolio-content">Приложение</p>
-          </li>
+            <li class="portfolio-item">
+              <img width="370" src="./images/portfolio img4.jpg" alt="" />
 
-          <li>
-            <img width="370" src="./images/portfolio img4.jpg" alt="" />
+              <h2 class="subtitle">Проект <span lang="en">Prime</span></h2>
+              <p class="portfolio-content">Маркетинг</p>
+            </li>
 
-            <h2 class="subtitle">Проект <span lang="en">Prime</span></h2>
-            <p class="portfolio-content">Маркетинг</p>
-          </li>
+            <li class="portfolio-item">
+              <img width="370" src="./images/portfolio img5.jpg" alt="" />
 
-          <li>
-            <img width="370" src="./images/portfolio img5.jpg" alt="" />
+              <h2 class="subtitle">Проект <span lang="en">Boxes</span></h2>
+              <p class="portfolio-content">Приложение</p>
+            </li>
 
-            <h2 class="subtitle">Проект <span lang="en">Boxes</span></h2>
-            <p class="portfolio-content">Приложение</p>
-          </li>
+            <li class="portfolio-item">
+              <img width="370" src="./images/portfolio img6.jpg" alt="" />
 
-          <li>
-            <img width="370" src="./images/portfolio img6.jpg" alt="" />
+              <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
+              <p class="portfolio-content">Веб-сайт</p>
+            </li>
 
-            <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
-            <p class="portfolio-content">Веб-сайт</p>
-          </li>
+            <li class="portfolio-item">
+              <img width="370" src="./images/portfolio img7.jpg" alt="" />
 
-          <li>
-            <img width="370" src="./images/portfolio img7.jpg" alt="" />
+              <h2 class="subtitle">Издание <span lang="en">Edition</span></h2>
+              <p class="portfolio-content">Дизайн</p>
+            </li>
 
-            <h2 class="subtitle">Издание <span lang="en">Edition</span></h2>
-            <p class="portfolio-content">Дизайн</p>
-          </li>
+            <li class="portfolio-item">
+              <img width="370" src="./images/portfolio img8.jpg" alt="" />
 
-          <li>
-            <img width="370" src="./images/portfolio img8.jpg" alt="" />
+              <h2 class="subtitle">Проект <span lang="en">LAB</span></h2>
+              <p class="portfolio-content">Маркетинг</p>
+            </li>
 
-            <h2 class="subtitle">Проект <span lang="en">LAB</span></h2>
-            <p class="portfolio-content">Маркетинг</p>
-          </li>
+            <li class="portfolio-item">
+              <img width="370" src="./images/portfolio img9.jpg" alt="" />
 
-          <li>
-            <img width="370" src="./images/portfolio img9.jpg" alt="" />
-
-            <h2 class="subtitle" lang="en">Growing Business</h2>
-            <p class="portfolio-content">Приложение</p>
-          </li>
-        </ul>
+              <h2 class="subtitle" lang="en">Growing Business</h2>
+              <p class="portfolio-content">Приложение</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <!--logo-->
-      <a href="" class="logo"
-        >Web<span class="colortext-footer">Studio</span></a
-      >
-      <address class="address">
-        <ul class="address-list">
-          <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-          <li>
-            <a href="" class="mail">info@example.com</a>
-          </li>
-          <li>
-            <a href="" class="tel">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <!--logo-->
+        <a href="" class="logo"
+          >Web<span class="colortext-footer">Studio</span></a
+        >
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+            <li>
+              <a href="" class="mail">info@example.com</a>
+            </li>
+            <li>
+              <a href="" class="tel">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
