fixed header (font)

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="page">
     <header class="header">
       <div class="container header-container">
         <!--logo-->
@@ -46,7 +46,7 @@
         </ul>
       </div>
     </header>
-    <main class="page">
+    <main>
       <section class="portfolio">
         <div class="container">
           <h1 hidden>Catalog</h1>
