--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -130,9 +133,10 @@
                 src="./images/photo1.jpg"
                 alt="Product Designer"
               />
-
-              <h3 class="team-subtitle">Игорь Демьяненко</h3>
-              <p lang="en" class="position">Product Designer</p>
+              <div class="team-box">
+                <h3 class="team-subtitle">Игорь Демьяненко</h3>
+                <p lang="en" class="position">Product Designer</p>
+              </div>
             </li>
 
             <li class="team-item">
@@ -142,22 +146,28 @@
                 alt="Frontend Developer"
               />
 
-              <h3 class="team-subtitle">Ольга Репина</h3>
-              <p lang="en" class="position">Frontend Developer</p>
+              <div class="team-box">
+                <h3 class="team-subtitle">Ольга Репина</h3>
+                <p lang="en" class="position">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="team-item">
               <img width="270" src="./images/photo3.jpg" alt="Marketing" />
 
-              <h3 class="team-subtitle">Николай Тарасов</h3>
-              <p lang="en" class="position">Marketing</p>
+              <div class="team-box">
+                <h3 class="team-subtitle">Николай Тарасов</h3>
+                <p lang="en" class="position">Marketing</p>
+              </div>
             </li>
 
             <li class="team-item">
-              <img width="260" src="./images/photo4.jpg" alt="UI Designer" />
+              <img width="270" src="./images/photo4.jpg" alt="UI Designer" />
 
-              <h3 class="team-subtitle">Михаил Ермаков</h3>
-              <p lang="en" class="position">UI Designer</p>
+              <div class="team-box">
+                <h3 class="team-subtitle">Михаил Ермаков</h3>
+                <p lang="en" class="position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -166,16 +176,16 @@
     <footer class="footer">
       <div class="container">
         <!--logo-->
-        <a href="" class="logo"
+        <a href="" class="logo-footer"
           >Web<span class="colortext-footer">Studio</span></a
         >
         <address class="address">
           <ul class="address-list">
-            <li>г. Киев, пр-т Леси Украинки, 26</li>
-            <li>
+            <li class="footer-item">г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="footer-item">
               <a href="" class="mail" lang="en">info@example.com</a>
             </li>
-            <li>
+            <li class="footer-item">
               <a href="" class="tel">+38 099 111 11 11</a>
             </li>
           </ul>
