--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
                 <a href="./index.html" class="link">Студия</a>
               </li>
               <li class="item-index">
-                <a href="./portfolio.html" class="link">Портфолио</a>
+                <a href="./portfolio.html" class="link current">Портфолио</a>
               </li>
               <li class="item-index">
                 <a href="" class="link">Контакты</a>
@@ -52,7 +52,7 @@
           <h1 hidden>Catalog</h1>
           <ul class="btn-list">
             <li class="btn-item">
-              <button type="button" class="portfolio-btn">Все</button>
+              <button type="button" class="portfolio-all-btn">Все</button>
             </li>
             <li class="btn-item">
               <button type="button" class="portfolio-btn">Веб-сайты</button>
@@ -71,66 +71,86 @@
             <li class="portfolio-item">
               <img width="370" src="./images/portfolio img1.jpg" alt="" />
 
-              <h2 class="subtitle">Технокряк</h2>
-              <p class="portfolio-content">Веб-сайт</p>
+              <div class="portfolio-box">
+                <h2 class="subtitle">Технокряк</h2>
+                <p class="portfolio-content">Веб-сайт</p>
+              </div>
             </li>
 
             <li class="portfolio-item">
               <img width="370" src="./images/portfolio img2.jpg" alt="" />
 
-              <h2 class="subtitle">
-                Постер <span lang="en">Orlean vs Golden Star</span>
-              </h2>
-              <p class="portfolio-content">Дизайн</p>
+              <div class="portfolio-box">
+                <h2 class="subtitle">
+                  Постер <span lang="en">Orlean vs Golden Star</span>
+                </h2>
+                <p class="portfolio-content">Дизайн</p>
+              </div>
             </li>
 
             <li class="portfolio-item">
               <img width="370" src="./images/portfolio img3.jpg" alt="" />
 
-              <h2 class="subtitle">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="portfolio-content">Приложение</p>
+              <div class="portfolio-box">
+                <h2 class="subtitle">
+                  Ресторан <span lang="en">Seafood</span>
+                </h2>
+                <p class="portfolio-content">Приложение</p>
+              </div>
             </li>
 
             <li class="portfolio-item">
               <img width="370" src="./images/portfolio img4.jpg" alt="" />
 
-              <h2 class="subtitle">Проект <span lang="en">Prime</span></h2>
-              <p class="portfolio-content">Маркетинг</p>
+              <div class="portfolio-box">
+                <h2 class="subtitle">Проект <span lang="en">Prime</span></h2>
+                <p class="portfolio-content">Маркетинг</p>
+              </div>
             </li>
 
             <li class="portfolio-item">
               <img width="370" src="./images/portfolio img5.jpg" alt="" />
 
-              <h2 class="subtitle">Проект <span lang="en">Boxes</span></h2>
-              <p class="portfolio-content">Приложение</p>
+              <div class="portfolio-box">
+                <h2 class="subtitle">Проект <span lang="en">Boxes</span></h2>
+                <p class="portfolio-content">Приложение</p>
+              </div>
             </li>
 
             <li class="portfolio-item">
               <img width="370" src="./images/portfolio img6.jpg" alt="" />
 
-              <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
-              <p class="portfolio-content">Веб-сайт</p>
+              <div class="portfolio-box">
+                <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
+                <p class="portfolio-content">Веб-сайт</p>
+              </div>
             </li>
 
             <li class="portfolio-item">
               <img width="370" src="./images/portfolio img7.jpg" alt="" />
 
-              <h2 class="subtitle">Издание <span lang="en">Edition</span></h2>
-              <p class="portfolio-content">Дизайн</p>
+              <div class="portfolio-box">
+                <h2 class="subtitle">Издание <span lang="en">Edition</span></h2>
+                <p class="portfolio-content">Дизайн</p>
+              </div>
             </li>
 
             <li class="portfolio-item">
               <img width="370" src="./images/portfolio img8.jpg" alt="" />
 
-              <h2 class="subtitle">Проект <span lang="en">LAB</span></h2>
-              <p class="portfolio-content">Маркетинг</p>
+              <div class="portfolio-box">
+                <h2 class="subtitle">Проект <span lang="en">LAB</span></h2>
+                <p class="portfolio-content">Маркетинг</p>
+              </div>
             </li>
 
             <li class="portfolio-item">
               <img width="370" src="./images/portfolio img9.jpg" alt="" />
 
-              <h2 class="subtitle" lang="en">Growing Business</h2>
-              <p class="portfolio-content">Приложение</p>
+              <div class="portfolio-box">
+                <h2 class="subtitle" lang="en">Growing Business</h2>
+                <p class="portfolio-content">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -144,11 +164,11 @@
         >
         <address class="address">
           <ul class="address-list">
-            <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-            <li>
+            <li class="footer-item">г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="footer-item">
               <a href="" class="mail">info@example.com</a>
             </li>
-            <li>
+            <li class="footer-item">
               <a href="" class="tel">+38 099 111 11 11</a>
             </li>
           </ul>
